--- a/css/responsive.css
+++ b/css/responsive.css
@@ -30,6 +30,50 @@ writer: css3studio
   header .btn_ab585ece95b90 span i{
     font-size:12px
   }
+  
+  .mobile_slide_menu_container .viewport-nav.mobile li.depth-01:last-child {
+    border-bottom:none !important;
+    padding-top:16px;
+  }
+  .mobile_slide_menu_container .viewport-nav.mobile li.depth-01:last-child > a{
+    display:none;
+  }
+  .mobile_slide_menu_container .viewport-nav.mobile li.depth-01:last-child > ul{
+    display:block !important;
+  }
+  
+  
+  .mobile_slide_menu_container .viewport-nav.mobile li.depth-01:last-child > ul > li{
+    margin-bottom:16px;
+    display:flex;
+    justify-content: space-between;
+    align-items: center;
+    width:180px !important;
+  }
+  .mobile_slide_menu_container .viewport-nav.mobile li.depth-01:last-child > ul > li:last-child{
+    margin-bottom:0;
+  }
+  
+  .mobile_slide_menu_container .viewport-nav.mobile li.depth-01:last-child > ul > li > a{
+    padding:0 16px;
+  }
+
+  .mobile_slide_menu_container .viewport-nav.mobile li.depth-01:last-child > ul > li > a span{
+    color:#111 !important;
+    font-weight:bold;
+  }
+  .mobile_slide_menu_container .viewport-nav.mobile li.depth-01:last-child > ul > li:after{
+    content:"";
+    display:block;
+    width:20px;
+    height:20px;
+    background:url(https://cdn.imweb.me/upload/S202205122b1ec895efdd4/64230e5591dc0.png) no-repeat 0 0;
+    background-size:contain;
+  }  
+
+  
+  
+  
 
   /* footer */
   .footer-group{
