--- a/css/custom.css
+++ b/css/custom.css
@@ -893,7 +893,7 @@ footer .custom-text{
   align-items:center;
   font-size: 14px;
   color: #FFF100;
-  margin-top:24px;
+  margin-left: 85px;
   border-bottom:2px solid;
 }
 .scription-main a.more:after{
