--- a/css/custom.css
+++ b/css/custom.css
@@ -1933,6 +1933,14 @@ li[data-code="m2022071487b863770974f"] ul{
 }
 
 /*영문*/
+.header-eng-container{
+  box-shadow: 0px 4px 24px rgba(0, 0, 0, 0.05);
+}
+.header-eng-container main > .inside > .doz_row:nth-of-type(2){
+  display:none;
+}
+
+
 .menu-eng-main > li{
   position:relative;
 }
