--- a/css/responsive.css
+++ b/css/responsive.css
@@ -892,6 +892,59 @@ writer: css3studio
     padding:0
   }
   
+  
+
+  /*영문*/
+  .header-eng-container{
+    box-shadow: 0px 4px 24px rgba(0, 0, 0, 0.05);
+  }
+
+  .menu-eng-main > li:after {
+    content: none;
+  }
+  
+  .header-eng nav{
+    max-height:0;
+    overflow:hidden;
+    background-color:#fff;
+    z-index:10;
+    margin:0 -16px;
+    width:100%;
+    padding:0 16px;    
+    transition: max-height 0.3s;
+  }
+  
+  .header-eng.open-mobile-menu nav{
+    max-height:500px;
+
+  }
+  .header-eng nav ul{
+    padding:16px 0;
+  }
+  .header-eng.open-mobile-menu:after{
+    content:"";
+    display:block;
+    background:rgba(0,0,0,0.3);
+    position:fixed;
+    top:56px;
+    left:0;
+    bottom:0;
+    right:0;
+  }
+  .header-eng .btn-mobile-menu2 .xi-bars{
+    display:block
+  }
+  .header-eng .btn-mobile-menu2 .xi-close{
+    display:none
+  }
+  .header-eng.open-mobile-menu .btn-mobile-menu2 .xi-bars{
+    display:none
+  }
+  .header-eng.open-mobile-menu .btn-mobile-menu2 .xi-close{
+    display:block
+  }
+  
+  
 }
 
 @media screen and (max-width:1168px) {
