--- a/css/custom.css
+++ b/css/custom.css
@@ -1937,7 +1937,7 @@ li[data-code="m2022071487b863770974f"] ul{
   box-shadow: 0px 4px 24px rgba(0, 0, 0, 0.05);
 }
 .header-eng-container main > .inside > .doz_row:nth-of-type(2){
-  display:none;
+  display:none !important;;
 }
 
 
