--- a/css/custom.css
+++ b/css/custom.css
@@ -1969,6 +1969,9 @@ li[data-code="m2022071487b863770974f"] ul{
 .menu-eng-main > li.active a{
   color:#B50F5F;
 }
+.menu-eng-main > li > a:hover{
+  color:#B50F5F;
+}
 
 .menu-eng-lang > li:first-child:after{
   content: "|";
