--- a/css/custom.css
+++ b/css/custom.css
@@ -269,6 +269,7 @@ footer .custom-text{
 }
 .footer-group .site-info .text-info{
   color:#999;
+  font-size:13px;
 }
 .footer-group .site-info .text-info dt{
   font-weight:700;
