--- a/css/custom.css
+++ b/css/custom.css
@@ -1998,3 +1998,7 @@ li[data-code="m2022071487b863770974f"] ul{
   padding-left:10px;
   padding-right:10px;
 }
+
+.footer-eng-container .footer-group .site-info{
+  display:block;
+}
