--- a/css/responsive.css
+++ b/css/responsive.css
@@ -173,7 +173,8 @@ writer: css3studio
   .footer-group .site-info{
     padding-top:32px;
     text-align:left;
-    flex-direction: column;
+    padding-bottom:160px;
+    display:block
   }
   .footer-group .site-info .text-info{
    text-align: center;
@@ -195,7 +196,10 @@ writer: css3studio
     margin-bottom:24px;
   }
   .footer-group .link-info{
-    padding-bottom:90px;
+    top:initial;
+    bottom:80px;
+    left:0;
+    padding-bottom:24px;
     border-bottom: 1px solid #E5E5E5;
   }
   .footer-group .link-info a{
