--- a/campaign2022.css
+++ b/campaign2022.css
@@ -16,8 +16,8 @@ writer: css3studio
   background-color:#000 !important;
 }
 ._body_menu_m20220530f386862f06d2b .btn-primary:hover{
-  border-color:#583DFF !important;
-  background-color:#583DFF !important;
+  border-color:#FF7051 !important;
+  background-color:#FF7051 !important;
 }
 ._body_menu_m20220530f386862f06d2b .btn-primary span{
   float:right;
