--- a/css/custom.css
+++ b/css/custom.css
@@ -1254,6 +1254,9 @@ body._body_menu_m202208234a34b5f548412 .sub-menu.h-menu-type1.menu-horizontal > 
 body._body_menu_m20220823b6e14e2b2ac2a .sub-menu.h-menu-type1.menu-horizontal{
   margin-bottom:0
 }
+body._body_menu_m202209193f4cef085fc17 .sub-menu.h-menu-type1.menu-horizontal{
+  margin-bottom:0
+}
 
 /* tab meu 2 */
 .sub-menu.h-menu-type2.menu-horizontal{
