--- a/css/responsive.css
+++ b/css/responsive.css
@@ -473,7 +473,9 @@ writer: css3studio
   #stb_subscribe > form .stb_form_policy{
     position:static;
   }
-
+  #stb_subscribe > form .stb_form_result{
+      position:static;
+  }
   #stb_subscribe > form > fieldset:nth-of-type(1){
     width:100%
   }
