기부 안내 버튼 스타일링

--- a/css/custom.css
+++ b/css/custom.css
@@ -1541,8 +1541,7 @@ a.arrow:after{
   color:#DE649F !important;
 }
 #w202210044e7ee56a30372 .button_wrap a:hover{
-  background-color:#000 !important;
-  border-color:#000 !important;
+  background-color:#D03B83 !important;
   color:#fff !important;
 }
 #w202210044e7ee56a30372 .button_wrap a span{
